<resources>
    <string name="app_name" translatable="false">CreditPal</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">CreditPal</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_account">Account Management</string>
    <string name="navigation_additional">Additional Services</string>
    <string name="navigation_Package_offers">Package Offers</string>
    <string name="navigation_usage_stats">Usage Stats</string>
    <string name="navigation_service_info">Service Information</string>
    <string name="navigation_faqs">FAQs</string>
    <string name="navigation_about">About</string>
    <string name="language" translatable="false">Language ቋንቋ</string>
    <string name="language_one" translatable="false">English</string>
    <string name="language_two" translatable="false">አማርኛ</string>
    <string name="refresh">refresh</string>


    <string name="info_account_management">On this screen you can perform basic actions like
        recharging your account, checking your remaining balance and etc… Tap on the 3 bars icon
        on the top left corner or swipe to left to open other options  </string>
    <string name="recharge">Recharge</string>
    <string name="recharge_for_others">Recharge for others</string>
    <string name="phone_number">Phone Number</string>
    <string name="send">Send</string>
    <string name="send_credit">Send Credit</string>
    <string name="from_contacts">From Contacts</string>
    <string name="call_me_back">Call Me Back Request</string>
    <string name="hint_recharge">Enter the hidden numbers here</string>
    <string name="hint_phone">Enter the phone number here</string>
    <string name="hint_amount">Enter the amount here</string>
    <string name="empty" translatable="false" />
    <string name="service_info">This service is used to communicate with Ethio Telecoms popups</string>
    <string name="birr">Birr</string>


    <string name="call_forwarding">Call Forwarding</string>
    <string name="info_call_forwarding">This service allows you to forward your incoming calls
    to another phone, usually called call diverting.</string>
    <string name="info_call_waiting">This service allows you to receive incoming call alerts while you are on a call.</string>
    <string name="info_voice_mail">This service allows you to leave a voice message when your mobile can not receive calls</string>
    <string name="info_mcn">This service notifies you of all the calls you have missed while you were not able to receive calls.
    This service uses SMS to notify you.</string>
    <string name="info_reachability_alert">This service notifies you when the person you have been trying to call becomes
    available and is able to receive your call. This service also uses SMS to notify you.</string>
    <string name="snack_accessibility"><b>Warning: some features of CreditPal won\'t work unless you enable accessibility setting for
        CreditPal, Please click on <i>ACTIVATE</i> and then in you device settings find CreditPal then enable it.</b></string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notification">You\'ll get an SMS notification shortly</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_daily">Daily</string>
    <string name="tab_weekly">Weekly</string>
    <string name="tab_monthly">Monthly</string>
    <string name="tab_weekend">Weekend</string>
    <string name="tab_nightly">Nightly</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="internet_fragment">Internet Packages</string>
    <string name="sms_fragment">SMS Packages</string>
    <string name="loading">Loading…</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!--Color prefs-->

    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="pink">Pink</string>

    <!--Internet Fragment-->

    <string name="dialog_internet">You have chosen to purchase a amount Internet package,
    hit the YES button to confirm and the NO button to cancel.</string>

    <!--Ads-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-4995528931656004/1340931282</string>

    <!--DEBUG MENU-->
    <string name="title_activity_debug_">Debug_Activity</string>
    <string name="info_cmb_notification">Get a notification whenever you get a call me back request with an option to directly call that number.</string>
    <string name="low_packages">Low Packages</string>
    <string name="package_warning">Get a notification whenever you consume 75% of your package.</string>
    <string name="floating_widget">Floating Widget</string>
    <string name="floating_description">A floating widget to manage your account and packages while on the go.
    Due to the new security features in Android 6 and above devices, its highly recommended that you close the widget by dragging it down while
        installing apps or when a permission dialog is visible</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="interactions">Interactions</string>
    <string name="vibrations">Vibrations</string>

    <!--instant check-->
    <string name="internet_plan">Internet Plan</string>
    <string name="voice_plan">Voice Plan</string>
    <string name="sms_plan">SMS Plan</string>

    <!--Packages lists-->
    <string name="birr_expires">Birr | Expires on:</string>

    <string name="expires_on">Expires on: </string>
    <string name="expires_at">Expires at: </string>

    <string name="notification_from">from </string>
    <string name="notification_low_package">Finished Package</string>
    <string name="notification_finished_package">Finished Package</string>
    <string name="finished_package_internet">You have finished your</string>
    <string name="low_internet_package">Low Internet Package</string>
    <string name="internet_message">You have used 75% of your</string>

    <!--package Types-->
    <string name="internet">Internet Package</string>
    <string name="voice">Voice Package</string>
    <string name="sms">SMS Package</string>
    <string name="balance">Balance</string>
    <string name="gift_package">Gift Package</string>
    <string name="gift_confirm">Package chosen \n</string>
    <string name="cancel">cancel</string>


</resources>
